--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -432,3 +432,13 @@ msgstr "Número de elementos que se mostrará."
 
 msgid "Album view"
 msgstr "Álbum"
+
+#############################
+# Subhome type #
+#############################
+
+msgid "Subhome"
+msgstr "Tablero de portlets"
+
+msgid "Subhome Description"
+msgstr "Elemento que permite crear una página con contenidos de distintas partes de la web"
