--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -1915,3 +1915,14 @@ msgstr ""
 #: genweb.upc/genweb/upc/browser/contact.py:151
 msgid "The entered text does not match the text in the image"
 msgstr "The entered text does not match the text in the image"
+
+
+#############################
+# Subhome type #
+#############################
+
+#. "manage_subhomeportlets_link"
+#. Default: "Manage subhome page"
+#: genweb.upc/genweb/upc/templates/genweb.theme.browser.viewlets_templates.manage_portlets_fallback.pt
+msgid "manage_subhomeportlets_link"
+msgstr "Manage portlet grid"
