noves traduccions i demana confirmacio al eliminar

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2034,12 +2034,25 @@ msgstr "Dia següent"
 msgid "The entered text does not match the text in the image"
 msgstr "El text introduït no coincideix amb el de la imatge"
 
-#############################
+################
 # Subhome type #
-#############################
+################
 
 #. "manage_subhomeportlets_link"
 #. Default: "Manage subhome page"
 #: genweb.upc/genweb/upc/templates/genweb.theme.browser.viewlets_templates.manage_portlets_fallback.pt
 msgid "manage_subhomeportlets_link"
 msgstr "Administra la graella de portlets"
+
+#######################
+# Delete confirmation #
+#######################
+
+msgid "alert_really_delete_contents"
+msgstr "Segur que vols eliminar aquests continguts?"
+
+msgid "delete"
+msgstr "Suprimeix"
+
+msgid "cancel"
+msgstr "Cancel·la"
