--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -283,10 +283,29 @@ msgstr "Marcar como importante"
 msgid "Master"
 msgstr "Máster"
 
+######################
+# Portlet Full News #
+######################
+
 #: genweb.theme/genweb/theme/portlets/fullnews.py:26
 #: genweb.theme/genweb/theme/portlets/news.py:26
 msgid "Maxim numero de noticies a mostrar (5 o 7)"
 msgstr "Máximo número de noticias a mostrar (5 ó 7)"
+
+msgid "Normal: imatge esquerra i text dreta"
+msgstr "Normal: imagen izquierda y texto derecha"
+msgid "Full: imatge a dalt i text a sota"
+msgstr "Anchura total: imagen arriba y texto debajo"
+msgid "Full a dos columnes: dues columnes amb imatge a dalt i text a sota"
+msgstr "Anchura total a dos columnas: dos columnas con imagen arriba y texto debajo"
+
+msgid "Tipus de vista"
+msgstr "Tipo de vista"
+msgid "Escull com es mostraran les noticies"
+msgstr "Cómo se mostrarán las noticias"
+
+msgid "Maxim numero de noticies a mostrar (d'1 a 7)"
+msgstr "Máximo número de noticias a mostrar (d'1 a 7)"
 
 #: genweb.theme/genweb/theme/portlets/fullnews.py:34
 #: genweb.theme/genweb/theme/portlets/news.py:34
