translate new views in fullnews portlet

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -140,11 +140,11 @@ msgstr "Notícies amb foto"
 msgid "FullNews"
 msgstr "Notícies amb foto"
 
-msgid "Normal: imatge esquerra i text dreta"
+msgid "Normal view"
 msgstr "Normal: imatge esquerra i text dreta"
-msgid "Full: imatge a dalt i text a sota"
+msgid "Full view"
 msgstr "Amplada total: imatge a dalt i text a sota"
-msgid "Full a dos columnes: dues columnes amb imatge a dalt i text a sota"
+msgid "Full2cols view"
 msgstr "Amplada total a dues columnes: dues columnes amb imatge a dalt i text a sota"
 
 msgid "Tipus de vista"
