--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -139,11 +139,11 @@ msgstr "News with image"
 msgid "FullNews"
 msgstr "News with image"
 
-msgid "Normal: imatge esquerra i text dreta"
+msgid "Normal view"
 msgstr "Normal: left image and right text"
-msgid "Full: imatge a dalt i text a sota"
+msgid "Full view"
 msgstr "Full: full image size and text below"
-msgid "Full a dos columnes: dues columnes amb imatge a dalt i text a sota"
+msgid "Full2cols view"
 msgstr "Full 2 columns: two columns of full image size and text below"
 
 msgid "Tipus de vista"
