--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -292,11 +292,11 @@ msgstr "Máster"
 msgid "Maxim numero de noticies a mostrar (5 o 7)"
 msgstr "Máximo número de noticias a mostrar (5 ó 7)"
 
-msgid "Normal: imatge esquerra i text dreta"
+msgid "Normal view"
 msgstr "Normal: imagen izquierda y texto derecha"
-msgid "Full: imatge a dalt i text a sota"
+msgid "Full view"
 msgstr "Anchura total: imagen arriba y texto debajo"
-msgid "Full a dos columnes: dues columnes amb imatge a dalt i text a sota"
+msgid "Full2cols view"
 msgstr "Anchura total a dos columnas: dos columnas con imagen arriba y texto debajo"
 
 msgid "Tipus de vista"
