--- a/genweb/core/locales/zh/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/zh/LC_MESSAGES/genweb.po
@@ -1028,6 +1028,9 @@ msgstr ""
 msgid "genweb_content_actions_vista_de_carpeta"
 msgstr "Folder views"
 
+msgid "genweb_content_actions_vista_de_document"
+msgstr "Document views"
+
 # Direccio
 #. Default: "Direcció"
 msgid "genweb_direccio"
