--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -60,6 +60,9 @@ msgstr "Calendar"
 msgid "portlet_collection_title"
 msgstr "Collection"
 
+msgid "portlet_multiviewcollection_title"
+msgstr "Multi-view Collection"
+
 msgid "portlet_login_title"
 msgstr "Login"
 
