--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2138,3 +2138,9 @@ msgstr "Col·lecció de destinació"
 #: genweb.upc/genweb/upc/portlets/multiviewcollection/multiviewcollection.py:98
 msgid "View type"
 msgstr "Tipus de vista"
+
+msgid "desc_privacy"
+msgstr "Podeu trobar les condicions d'ús i privacitat <a href='http://www.upc.edu/avis-legal/condicions-dus-i-privacitat' target='_blank'>aquí</a>"
+
+msgid "title_privacy"
+msgstr "He llegit i accepto les condicions d'ús i privacitat"
