Translate modification date

--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -456,3 +456,6 @@ msgstr "Graella de portlets"
 
 msgid "Subhome Description"
 msgstr "Element que permet afegir una pàgina amb continguts de diferents parts de la web"
+
+msgid "ModificationDate"
+msgstr "Data de modificacio"
