--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -458,4 +458,4 @@ msgid "Subhome Description"
 msgstr "Element que permet afegir una pàgina amb continguts de diferents parts de la web"
 
 msgid "ModificationDate"
-msgstr "Data de modificacio"
+msgstr "Modificat"
