--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -2065,7 +2065,7 @@ msgid "View type"
 msgstr "Tipo de vista"
 
 msgid "desc_privacy"
-msgstr "Puedes encontrar las condiciones de uso y privacidad <a href='http://www.upc.edu/aviso-legal/condiciones-de-uso-y-privacidad?set_language=es' target='_blank'>aquí</a>"
+msgstr "Puedes encontrar las condiciones de uso y privacidad <a href='https://www.upc.edu/es/aviso-legal/condiciones-de-uso-y-privacidad' target='_blank'>aquí</a>"
 
 msgid "title_privacy"
 msgstr "He leído y acepto las condiciones de uso y privacidad"
