--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -2057,9 +2057,13 @@ msgstr "Dia següent"
 # genweb.upc contact form
 #########################
 
-#: genweb.upc/genweb/upc/browser/contact.py:151
+#: genweb.upc/genweb/upc/browser/contact.py:167
 msgid "The entered text does not match the text in the image"
 msgstr "El text introduït no coincideix amb el de la imatge"
+
+#: genweb.upc/genweb/upc/browser/contact.py:220
+msgid "The contact has not been selected. It was sent to the site administrator."
+msgstr "El contacte no s'ha seleccionat. S'ha enviat a l'administrador del lloc."
 
 ################
 # Subhome type #
